# rustycoins

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  db.sqlite  diesel.toml  output.txt
.github/workflows/: rust.yml
assets/: sqlite3.lib
libs/: sqlite3.lib
migrations/2024-08-11-183244_accounts/: up.sql
migrations/2024-08-11-183318_transactions/: up.sql
migrations/2024-08-11-183330_ledger/: down.sql  up.sql
migrations/2024-08-11-183452_journal/: down.sql  up.sql
src/: account_list.rs  app.rs  bootstrap_database.rs  functions.rs  ledger_view.rs  lib.rs  main.rs  report.rs  schema.rs  structs.rs  transaction_form.rs  transaction_list.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  handlers.rs  main.rs  models.rs
