[package]
name = "rustycoins-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }

[workspace]
members = ["src-tauri"]
